2001-05-27  Dekel Tsur  <dekelts@tau.ac.il>

	* src/LaTeX.C (deplog): Make sure that the main .tex file is in the
	dependancy file

2001-05-23  Angus Leeming <a.leeming@ic.ac.uk>

	* src/frontends/xforms/FormCitation.C:
	* src/frontends/xforms/forms/form_citation.fd:
	tweaks to activate Ok,Apply buttons when text is entered.
	Removed natbib cruft as it's now in a branch and was deactivated
	anyway. 

2001-05-22  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* lib/ui/default.ui: fix Insert>File>Ascii entries.

2001-05-22  Peter Suetterlin  <P.Suetterlin@astro.uu.nl>

	* lib/templates/aa.lyx: rename from aapaper.lyx

	* lib/layouts/aa.layout: rename from aapaper.layout

	* lib/examples/aa_head.lyx:
	* lib/examples/aa_head.lyx: update

2001-05-18  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* src/version.h (LYX_VERSION): revert to 1.1.6cvs

2001-05-18  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* src/version.h (LYX_RELEASE): LyX 1.1.6fix2 released

	* lib/languages: change GUI name of portugues and brazil.

2001-05-16  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* src/kbmap.C (findbinding): clean it up and finally get it to work
	correctly.

2001-05-15  Juergen Vigna  <jug@sad.it>

	* src/tabular.C (TeXCellPreamble): fixed the left border problem for
	multicolumn cells.

2001-05-14  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* src/LaTeXLog.C: add "using" directive

2001-02-23  Dekel Tsur  <dekelts@tau.ac.il>

	* src/lyxrc.C: Add language_command_local, language_use_babel and
 	language_global_options.

	* src/lyxfont.C (latexWriteStartChanges): Use language_command_local.

	* src/buffer.C (makeLaTeXFile): Use language_use_babel and 
	language_global_options.

2001-05-04  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* lib/examples/de_splash.lyx: update from Pit Suetterlin

	* lib/bind/fi_menus.bind: update from Pauli Virtanen

2001-05-03  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>
