@@ -253,7 +253,7 @@
 \bind "C-c C-f C-r"		"font-roman"
 \bind "C-c C-f C-t"		"font-code"  #typewriter
 
-\bind "C-c asciitilde"		"math-mode"
+\bind "C-c ~S-asciitilde"		"math-mode"
 
 \bind "C-c quoteleft"		"error-next"
 
